# datasette-metasearch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_metasearch/: __init__.py  utils.py
datasette_metasearch/templates/: beta.html
tests/: test_cli.py  test_plugin.py
